# corodaw

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
crates/audio-graph/: Cargo.toml
crates/audio-graph/src/: audio_graph.rs  desc.rs  events.rs  lib.rs  node.rs  tests.rs  worker.rs
crates/audio-graph/src/worker/: buffers.rs  state.rs
crates/corodaw/: Cargo.toml
crates/corodaw-egui/: Cargo.toml
crates/corodaw-egui-widgets/: Cargo.toml
crates/corodaw-egui-widgets/src/: arranger.rs  lib.rs  main.rs
crates/corodaw-egui/src/: app.rs  arranger.rs  main.rs  module.rs  plugins.rs
crates/corodaw-gpui/: Cargo.toml
crates/corodaw-gpui/src/: main.rs  module.rs
crates/corodaw-widgets/: Cargo.toml
crates/corodaw-widgets/examples/: demo.rs
crates/corodaw-widgets/src/: arranger.rs  lib.rs  main.rs  meter.rs
crates/corodaw/src/: arranger.rs  audio.rs  audio_graph.rs  builtin.rs  gui.rs  main.rs  module.rs  plugins.rs  project.rs
crates/corodaw/src/audio_graph/: clap_adapter.rs
crates/corodaw/src/plugins/: discovery.rs  gui.rs  timers.rs
crates/corodaw/src/project/: timers.rs
crates/engine/: Cargo.toml  README.md
crates/engine/src/: audio.rs  audio_graph.rs  builtin.rs  lib.rs  midi.rs  plugins.rs
crates/engine/src/audio_graph/: clap_adapter.rs
crates/engine/src/builtin/: gain.rs  midi_input.rs  peak.rs  summer.rs  vu.rs
crates/engine/src/plugins/: clap_adapter.rs  discovery.rs  gui.rs  timers.rs  ui_host.rs
crates/plugin-ui-host/: Cargo.toml
crates/plugin-ui-host/src/: lib.rs
crates/project/: Cargo.toml  README.md
crates/project/src/: app.rs  channel.rs  commands.rs  found_plugin.rs  lib.rs  model.rs  project.rs
crates/project/src/channel/: components.rs  edits.rs  mod.rs  tests.rs
crates/project/src/channel/tests/: commands.rs  systems.rs
docs/: naming-conventions.md
