[workspace]
resolver = "3"
members = [
  "crates/audio-graph",
  "crates/corodaw",
  "crates/corodaw-widgets",
  "crates/engine",
  "crates/project"
]
default-members = ["crates/corodaw"]

[workspace.dependencies]
anyhow = "1.0.100"
audio-blocks = { git = "https://github.com/damyanp/audio-blocks", branch = "exact-size" }
bevy = { version = "0.18.0", default-features = false, features = [
  "std",
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_mesh",
  "bevy_render",
  "bevy_shader",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
] }
bevy_app = "0.18.0"
bevy_ecs = { version = "0.18.0", features = ["default", "debug", "serialize"] }
bevy_egui = { version = "0.39", default-features = false, features = ["render", "manage_clipboard", "default_fonts"] }
bevy-inspector-egui = { version = "0.36", default-features = false, features = ["egui_clipboard"] }
bevy_reflect = "0.18.0"
clack-extensions = { package = "clack-extensions", git = "https://github.com/prokopyl/clack.git", features = [
  "audio-ports",
  "clack-host",
  "gui",
  "log",
  "note-ports",
  "params",
  "raw-window-handle_06",
  "state",
  "timer"
] }
base64 = "0.22"
clack-host = { package = "clack-host", git = "https://github.com/prokopyl/clack.git" }
cpal = { version = "0.17.0", features = ["asio"] }
derivative = "2.2.0"
eframe = { version = "0.33.3" }
egui = { version = "0.33.3", features = ["callstack"] }
egui_extras = "0.33.3"
futures = "0.3.31"
futures-channel = "0.3.31"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
thiserror = "2.0.18"
uuid = { version = "1", features = ["serde", "v4"] }
wmidi = "4.0.6"
