[workspace]
resolver = "3"
members = [
  "crates/audio-graph",
  "crates/corodaw",
  "crates/corodaw-widgets",
  "crates/engine",
  "crates/project"
]

[workspace.dependencies]
anyhow = "1.0.100"
audio-blocks = { git = "https://github.com/damyanp/audio-blocks", branch = "exact-size" }
base64 = "0.22"
bevy = { version = "0.19.0", default-features = false, features = [
  "bevy_asset",
  "bevy_camera",
  "bevy_color",
  "bevy_core_pipeline",
  "bevy_image",
  "bevy_log",
  "bevy_mesh",
  "bevy_render",
  "bevy_shader",
  "bevy_window",
  "bevy_winit",
  "multi_threaded",
  "std",
] }
bevy_app = "0.19.0"
bevy_ecs = { version = "0.19.0", features = ["default", "debug", "serialize"] }
bevy_egui = { version = "0.40", default-features = false, features = [
  "default_fonts",
  "manage_clipboard",
  "render"
] }
bevy-inspector-egui = { version = "0.37", default-features = false, features = [
  "egui_clipboard"
] }
bevy_reflect = "0.19.0"
clack-extensions = { package = "clack-extensions", git = "https://github.com/prokopyl/clack.git", features = [
  "audio-ports",
  "clack-host",
  "gui",
  "log",
  "note-ports",
  "params",
  "raw-window-handle_06",
  "state",
  "timer"
] }
clack-host = { package = "clack-host", git = "https://github.com/prokopyl/clack.git" }
cpal = { version = "0.17.0", features = ["asio"] }
derivative = "2.2.0"
eframe = { version = "0.35" }
egui = { version = "0.34", features = ["callstack"] }
egui_extras = "0.34"
futures = "0.3.31"
futures-channel = "0.3.31"
raw-window-handle = "0.6.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
thiserror = "2.0.18"
uuid = { version = "1", features = ["serde", "v4"] }
wmidi = "4.0.6"
