[package]
name = "corodaw-egui"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
clack-extensions.workspace = true
cpal.workspace = true
eframe = "0.33.3"
engine = { path = "../engine" }
futures.workspace = true
futures-channel.workspace = true
plugin-ui-host = { path = "../plugin-ui-host" }
raw-window-handle.workspace = true
smol = "2.0.2"
winit = "0.30.12"
