[package]
name = "corodaw"
version = "0.1.0"
edition = "2024"

[dependencies]
audio-graph = { path = "../audio-graph" }
bevy_app.workspace = true
bevy_ecs.workspace = true
corodaw-widgets = { path = "../corodaw-widgets" }
eframe.workspace = true
engine = { path = "../engine" }
project = { path = "../project" }
rfd = "0.17.2"
smol.workspace = true
winit = "0.30.12"
