[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
audio-blocks.workspace = true
audio-graph = { path = "../audio-graph" }
clack-extensions.workspace = true
clack-host.workspace = true
cpal.workspace = true
derivative = "2.2.0"
dirs = "6.0.0"
futures-channel.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol.workspace = true
walkdir = "2.5.0"
windows = { version = "*", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
