[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
audio-blocks.workspace = true
audio-graph = { path = "../audio-graph" }
clack-extensions.workspace = true
clack-host.workspace = true
cpal.workspace = true
derivative.workspace = true
dirs = "6.0.0"
futures-channel.workspace = true
midir = "0.10.0"
rtrb = "0.3.0"
serde.workspace = true
serde_json.workspace = true
smol.workspace = true
walkdir = "2.5.0"
windows = { version = "*", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
wmidi.workspace = true
