[package]
name = "project"
version = "0.1.0"
edition = "2024"

[dependencies]
audio-graph = { path = "../audio-graph" }
base64.workspace = true
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
derivative.workspace = true
engine = { path = "../engine" }
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
